--- a/setoran.html
+++ b/setoran.html
@@ -193,13 +193,13 @@
                         </td>
                       </tr>
                       <tr>
-                        <td>JKM-DPR</td>
+                        <td>JKM</td>
                         <td>Pemprov Sulsel</td>
                         <td>Induk</td>
                         <td>4 Juni 2021</td>
-                        <td>500.000.000</td>
+                        <td>647.495.437</td>
                         <td>-</td>
-                        <td>300</td>
+                        <td>23.245</td>
                         <td>
                           <button
                             class="btn btn-sm btn-primary"
