--- a/upload.html
+++ b/upload.html
@@ -240,8 +240,9 @@
                       <button
                         class="btn btn-sm btn-primary"
                         type="button"
-                        data-toggle="modal"
-                        data-target="#successModal"
+                        data-coreui-toggle="modal"
+                        data-coreui-target="#successModal"
+                        data-coreui-dismiss="modal"
                       >
                         Submit
                       </button>
